# grasmere-routes

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  requirements.txt  streamlit_app.py
.streamlit/: config.toml  secrets.toml.example
apps/optimiser/: Dockerfile  README.md  pyproject.toml
apps/optimiser/app/: baseline.py  config.py  main.py  marginal.py  matrix.py
apps/optimiser/tests/: test_cost_model.py  test_optimise.py
apps/web/: drizzle.config.ts  next.config.ts  package.json  tailwind.config.ts  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  (+1 more)
docs/: deploy.md  spec.md
grasmere_routes/: auth.py  baseline_service.py  bootstrap.py  cost_model.py  csv_import.py  customer_upsert.py  day_service.py  db.py  format.py  geocode.py  map_layers.py  matrix.py  optimise.py  orders_import.py  plan_service.py  postcodes.py  queries.py  run_code.py  schemas.py  status.py
grasmere_routes/sql/: 001_schema.sql  002_customer_status_view.sql  003_seed.sql  004_orders_import_columns.sql
pages/: 01_Costs.py  01_Plan.py  02_Baseline.py  02_Fresho.py  03_Economics.py  04_Customers.py  05_Dormant.py  06_Customer_Detail.py  07_Import.py  08_Simulate.py  09_Runs.py  10_Drive.py  11_Admin.py  12_Order_Import.py
scripts/: fresho_pull.py  fresho_pull_scheduled.ps1  seed-from-csv.md
tests/: test_cost_model.py  test_csv_import.py  test_day_service.py  test_geocode.py  test_map_layers.py  test_optimise.py  test_orders_import.py  test_postcodes.py  test_run_code.py  test_status.py
tests/fixtures/: delivery_runs_sample.xlsx.md
(+60 files in other folders)
